[project]
name = "til-query"
version = "0.1.0"
edition = "2018"
publish = false
description = "A query storage for the Tydi Intermediate representation Language"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indexmap = "1.7.0"
log = "0.4.14"
salsa = "0.16.1"
tydi-common = { path = "../common" }
tydi-intern = { path = "../intern" }

[dev-dependencies]
til-parser = {path = "../til_parser"}
criterion = "0.3"

[[bench]]
name = "parse_benchmark"
harness = false