[project]
name = "til-query"
version = "0.1.0"
edition = "2021"
publish = false
description = "A query storage for the Tydi Intermediate representation Language"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tydi-common = { path = "../common" }
tydi-intern = { path = "../intern" }
log = "0.4.14"
salsa = "0.16.1"
bitvec = "1.0.0"
textwrap = "0.15.0"