[project]
name = "til-vhdl"
version = "0.1.0"
edition = "2021"
publish = false
description = "A VHDL compiler for the Tydi Intermediate representation Language"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
salsa = "0.16.1"
til-query = {path = "../til_query"}
tydi-common = { path = "../common" }
tydi-intern = { path = "../intern" }
tydi-vhdl = { path = "../vhdl" }

[dev-dependencies]
til-parser = {path = "../til_parser"}