# Copied from https://github.com/tydi-lang/tydi for now
[project]
name = "tydi-vhdl"
version = "0.0.0"
edition = "2018"
publish = false
description = "VHDL library for Tydi back-ends"

[dependencies]
indexmap = "1.7.0"
tydi-common = { path = "../common" }
tydi-intern = { path = "../intern" }
itertools = "0.10.3"
textwrap = "0.14.2"
salsa = "0.16.1"