# Copied from https://github.com/tydi-lang/tydi for now
[project]
name = "tydi-vhdl"
version = "0.0.0"
edition = "2021"
publish = false
description = "VHDL library for Tydi back-ends"

[dependencies]
bitvec = "1.0.0"
indexmap = "1.7.0"
tydi-common = { path = "../common" }
tydi-intern = { path = "../intern" }
itertools = "0.10.3"
textwrap = "0.15.0"
salsa = "0.16.1"
uncased = "0.9.7"